@@ -20,6 +20,7 @@ OutputBusXfers=Yes
 
 [Input1]
 DelayControlSource=1000
+SourceIpAddress1=192.168.21.92
 
 [Input2]
 DelayControlSource=1001
